--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-bg {
-    background-image: url('../../../images/others/footer.jpeg');
+    background-image: url('../../images/others/footer.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
 }
